smalller screen layout width fixed + text truncation added

--- a/src/app/pages/teamtalkers/teamtalkers.component.scss
+++ b/src/app/pages/teamtalkers/teamtalkers.component.scss
@@ -49,7 +49,7 @@
     }
 
     .preview-facebook-media .preview-media-post{
-        height: auto;
+        height: 400px;
         background-size: cover;
         background-position: center center;
         background-color: #F3F6F9;
