--- a/src/styles.scss
+++ b/src/styles.scss
@@ -344,8 +344,21 @@ label{
   .mat-tab-label{
     font-size: 12px !important
  }
+ .aside {
+  width: 220px !important;
+}
+.aside-fixed .wrapper {
+  padding-left: 220px !important;
+}
+.aside-enabled .header.header-fixed {
+  left: 220px !important;
+}
 
 }
+
+
+
+
 
 .playBtn {
   position: absolute;
@@ -363,3 +376,4 @@ label{
   text-shadow: 2px 2px 4px #000000;
   cursor: pointer;
 }
+
